test/visibility/private/uses/accessType.good
accessType.chpl:5: error: Attempt to 'new' a function or undefined symbol
accessType.chpl:5: error: 'Foo' undeclared (first use this function)
